# telegram-bot

Бот ИИ-помощник/: .gitignore  Makefile  README.md  install.bat  install_simple.py  main.py  pyproject.toml  requirements.txt  run.bat
Бот ИИ-помощник/src/: __init__.py  config.py  keyboards.py  logger.py  scheduler.py  states.py  storage.py  texts.py
Бот ИИ-помощник/src/handlers/: abstinence.py  billing.py  common.py  evening.py  export.py  focus.py  habits.py  menu.py  mood.py  morning.py  profile.py  reflect.py  settings.py  start.py  weekly.py
Бот ИИ-помощник/src/middlewares/: __init__.py  subscription_gate.py
Бот ИИ-помощник/src/payments/: __init__.py  tribute.py
Бот ИИ-помощник/src/services/: emotion.py  flow.py  gpt.py  memories.py  pdf.py  persona.py  reports.py  timeutils.py  ux.py
