[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "personal-brain-bot"
version = "1.0.0"
description = "Личный Мозг: Цифровое Я - Telegram бот для планирования и личностного роста"
authors = [{name = "Personal Brain Team"}]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiogram>=3.0.0",
    "apscheduler>=3.10.0",
    "aiosqlite>=0.19.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.25.0",
    "openai>=1.0.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "reportlab>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pyflakes>=3.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 88
